Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.make_a_bark()>"
+       "'ruff ruff!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
     "    return 'ruff ruff!'\n",
     "\n",
     "rex.bark = make_a_bark\n",
-    "rex.bark"
+    "rex.bark()"
    ]
   },
   {
