--- a/index.ipynb
+++ b/index.ipynb
@@ -233,16 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Dog.bark of <__main__.Dog object at 0x7f36ac49aeb8>>"
+       "<bound method Dog.bark of <__main__.Dog object at 0x7f36ac432048>>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
