--- a/index.ipynb
+++ b/index.ipynb
@@ -382,15 +382,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. <__main__.Dog object at 0x111b69ef0>\n",
-      "2. <__main__.Dog object at 0x111b69ef0>\n"
+      "1. <__main__.Dog object at 0x7f36ac432828>\n",
+      "2. <__main__.Dog object at 0x7f36ac432828>\n"
      ]
     }
    ],
